[package]
name = "ckproof-server"
version = "0.1.0"
authors = ["TopologicallySpeaking <64005627+TopologicallySpeaking@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-files = "0.4"
env_logger = "0.8"
serde_json = "1.0"
tera = "1.12"

[dependencies.serde]
version = "1.0"
features = ["derive"]

# TODO: Publish this to crates.io
[dependencies.ckproof]
path = "../ckproof"
